--- a/conf/locale/locale_en-US.ini
+++ b/conf/locale/locale_en-US.ini
@@ -417,6 +417,7 @@ license_helper = Select a license file
 readme = Readme
 readme_helper = Select a readme template
 auto_init = Initialize this repository with selected files and template
+save_default_repo=Save repo defaults as selected (applies to Owner, visibility, .gitignore, license, and readme)
 create_repo = Create Repository
 default_branch = Default Branch
 mirror_prune = Prune
