--- a/conf/locale/locale_en-GB.ini
+++ b/conf/locale/locale_en-GB.ini
@@ -421,6 +421,7 @@ license_helper=Select a licence file
 readme=Readme
 readme_helper=Select a readme template
 auto_init=Initialise this repository with selected files and template
+save_default_repo=Save repo defaults as selected (applies to Owner, visibility, .gitignore, license, and readme)
 create_repo=Create Repository
 default_branch=Default Branch
 mirror_prune=Prune
